buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        mavenCentral()
        maven { url = 'https://dist.creeper.host/Sponge/maven' }
        maven { url = 'https://repo.spongepowered.org/maven' }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
    }
}

plugins {
    id 'com.github.gmazzo.buildconfig' version '3.0.1'
}

apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'idea'
apply plugin: 'org.spongepowered.mixin'
apply from: 'https://gist.githubusercontent.com/LordGrimmauld/66f552c0d0bd50763098e92aa22a51df/raw/a4eb350252bdb76a570de110f55b4de19ac92ded/modconfig.gradle'



repositories {
    maven {
        // Location of the maven that hosts JEI files (and TiC)
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }

    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url 'https://jitpack.io/'
    }
    maven {
        // Location of the maven for mixed mappings, Registrate, and Flywheel
        name = "tterrag maven"
        url = "https://maven.tterrag.com/"
    }
    maven {
        // Maven for Tetra and mutil
        name = "blamejared maven"
        url = "https://maven.blamejared.com/"
    }
}

version = "${minecraft_version}-${mod_version}"
group = "mod.noobulus.${modid}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "${modid}"

java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Mojang ships Java 8 to end users, so your mod should target Java 8.

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: 'official', version: "${minecraft_version}"
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            arg "-mixin.config=${modid}.mixins.json".toString()
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${modid}" {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            arg "-mixin.config=${modid}.mixins.json".toString()
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${modid}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args "--mod", modid, "--all", "--output", file('src/generated/resources/'), "--existing", file('src/main/resources/')

            mods {
                "${modid}" {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // implementation fg.deobf("curse.maven:tetra-289712:3640654")
    // implementation fg.deobf("curse.maven:mutil-351914:3640643")
    // implementation fg.deobf("curse.maven:harvests-571339:3640648") borked in dev?
    // implementation fg.deobf("curse.maven:create-328085:3419412")
    // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
    implementation fg.deobf("curse.maven:supplementaries-412082:3826125")
    implementation fg.deobf("curse.maven:selene-499980:3826120")
    implementation fg.deobf("curse.maven:alexsmobs-426558:3785938")
    implementation fg.deobf("curse.maven:citadel-331936:3783096")

    //runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
    runtimeOnly fg.deobf("curse.maven:openloader-354339:3697234")
    runtimeOnly fg.deobf("curse.maven:neat-238372:3593906")
    runtimeOnly fg.deobf("curse.maven:quark-243121:3800462")
    runtimeOnly fg.deobf("curse.maven:quarkoddities-301051:3575623")
    runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3642382")
    runtimeOnly fg.deobf("curse.maven:farmersdelight-398521:3784851")
    /*
    runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
    runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
    runtimeOnly fg.deobf("curse.maven:abnormals_core-382216:3457851")
    runtimeOnly fg.deobf("curse.maven:autumnity-365045:3295700")
    runtimeOnly fg.deobf("curse.maven:upgrade_aquatic-326895:3249419")
    runtimeOnly fg.deobf("curse.maven:endergetic_expansion-291509:3154938")
    runtimeOnly fg.deobf("curse.maven:betterend_reforked-537247:3507856")
    runtimeOnly fg.deobf("curse.maven:infernal_expansion-395078:3487698")
     */

    // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
    implementation fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")

    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
    implementation fg.deobf("com.simibubi.create:Create:${create_version}")

    implementation fg.deobf("se.mickelus.mutil:mutil:${mutil_version}")
    implementation fg.deobf("se.mickelus.tetra:tetra:${tetra_version}")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

compileJava.options.encoding = 'UTF-8'

jar {
    manifest {
        attributes([
                "Specification-Title"     : "${modid}",
                "Specification-Vendor"    : "Noobulus",
                "Specification-Version"   : "0.1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Noobulus",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${modid}.mixins.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

mixin {
    add sourceSets.main, "${modid}.refmap.json"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

buildConfig {
    buildConfigField 'String', 'MODID', "\"${modid}\""
    buildConfigField 'String', 'VERSION', "\"${project.version}\""
    def gitstage = getGitInfo()
    println("Using git stage ${gitstage}")
    buildConfigField "String", "GITHASH", "\"${gitstage}\""

    version = project.version
    packageName = project.group
}
